Fix alignment issues and final few touches

--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.scss
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.scss
@@ -26,10 +26,10 @@
     background: #108000;
     border-radius: 5px;
     width: 318px;
+    height: 48px;
   }
 
   &--qbo-connect-text {
-    padding: 10px 28px;
     color: #FFFFFF;
   }
 
