--- a/src/app/shared/components/configuration/qbo-connector/qbo-connector.component.scss
+++ b/src/app/shared/components/configuration/qbo-connector/qbo-connector.component.scss
@@ -1,6 +1,4 @@
 .qbo-connector {
-  min-height: 585px;
-
   &--connection-blocks {
     padding-top: 9px;
   }
